--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/text"
+        android:id="@+id/numeral"
         android:layout_width="match_parent"
         android:layout_height="88dp"
         android:layout_alignParentStart="true"
@@ -17,43 +17,53 @@
         android:inputType="textPersonName"
         android:text="0"
         android:textAlignment="textEnd"
-        android:textSize="60dp" />
+        android:textSize="50dp" />
 
     <LinearLayout
         android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/text"
+        android:layout_below="@+id/numeral"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/bC"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:text="C"
+            android:textSize="20dp" />
 
         <Button
-            android:id="@+id/button5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/binverso"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:textSize="20dp"
+            android:text="+/-" />
 
         <Button
-            android:id="@+id/button6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/bpercente"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:textSize="20dp"
+            android:text="%" />
 
         <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/bdivide"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:background="#ffff8800"
+            android:textColor="#ffffffff"
+            android:textSize="20dp"
+            android:text="/" />
     </LinearLayout>
 
     <LinearLayout
@@ -65,32 +75,42 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/b7"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:textSize="20dp"
+            android:text="7" />
 
         <Button
-            android:id="@+id/button9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/b8"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:textSize="20dp"
+            android:text="8" />
 
         <Button
-            android:id="@+id/button10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/b9"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:textSize="20dp"
+            android:text="9" />
 
         <Button
-            android:id="@+id/button7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/bmultiplica"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="20dp"
+            android:layout_marginHorizontal="5dp"
+            android:background="#ffff8800"
+            android:textColor="#ffffffff"
+            android:text="X" />
     </LinearLayout>
 
     <LinearLayout
@@ -102,71 +122,127 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/b4"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:textSize="20dp"
+            android:text="4" />
 
         <Button
-            android:id="@+id/button14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/b5"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:textSize="20dp"
+            android:text="5" />
 
         <Button
-            android:id="@+id/button13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/b6"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:textSize="20dp"
+            android:text="6" />
 
         <Button
-            android:id="@+id/button11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/bmenos"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:layout_marginHorizontal="5dp"
+            android:textSize="20dp"
+            android:background="#ffff8800"
+            android:textColor="#ffffffff"
+            android:text="-" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layout4"
         android:layout_width="match_parent"
-        android:layout_height="51dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/layout3"
-        android:layout_marginBottom="228dp"
+        android:layout_below="@+id/layout3"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/b1"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="1"
+            android:textSize="20dp" />
 
         <Button
-            android:id="@+id/button19"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/b2"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="2"
+            android:textSize="20dp" />
 
         <Button
-            android:id="@+id/button20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/b3"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="3"
+            android:textSize="20dp" />
 
         <Button
-            android:id="@+id/button17"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/bmais"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
-            android:text="Button" />
+            android:background="#ffff8800"
+            android:text="+"
+            android:textColor="#ffffffff"
+            android:textSize="20dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/layout4"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/b0"
+            android:layout_width="105dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="1"
+            android:text="0"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/bponto"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="1"
+            android:text="."
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/bigual"
+            android:layout_width="0dp"
+            android:layout_height="90dp"
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="1"
+            android:background="#ffff8800"
+            android:text="="
+            android:textColor="#ffffffff"
+            android:textSize="20dp" />
     </LinearLayout>
 
 
